# Sentinel-Alpha

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.web  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
config/: settings.toml
config/session_store/: 00a91be1-d490-4959-bf8f-435574bacfe1.json  01a519d7-84f5-4b4a-91a1-bfbb074ea09e.json  03909725-5d4d-41db-ae5f-7f9c463b3cc8.json  05d5c1e9-91e2-44bd-b5fb-dd7d5982dd64.json  0b8bfc9a-fdfc-4c8e-a2f2-875ce231a742.json  0e5b8055-0f99-477b-bc6b-4e5a15fea1bc.json  17b1d193-77f7-4230-a415-549a9f7c254f.json  2003f423-6273-4034-85a2-b4f96de78e22.json  22172550-4432-4ff4-bb9d-ba56686ee62c.json  25e0feaa-4755-42d8-a35a-9d3901fdf96d.json  278a105f-c432-4b4e-aa03-26c4c97759af.json  2960fcb5-7b13-427f-afb7-e2d80ab6a01d.json  (+66 more)
docs/: agent-state-machine.md  api-spec.md  architecture.md  completion-roadmap.md  configuration.md  database-spec.md  docker-deployment.md  github-technical-guide.md  no-fabrication.md  strategy-training-page-data-mapping.md  ui-page-api-mapping.md  ui-page-function-report.md
examples/: demo_pipeline.py  generate_scenarios.py
prompts/: noise_generation_prompt.md
scripts/: dev_local.sh  e2e_full_flow_live_llm.py  e2e_full_flow_live_llm.sh  e2e_strategy_iterate_progress.sh  import_market_template_library.py  migrate_google_keys_to_dotenv.py
sql/: behavioral_log.sql  product_schema.sql
tests/: conftest.py  test_api_workflow.py  test_free_market_data.py  test_pipeline.py  test_scenario_generator.py  test_strategy_interface.py
web/: index.html  script.js  styles.css
(+139 files in other folders)
