[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-alpha"
version = "0.1.0"
description = "Behavior-aligned personal trading framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "sentry-sdk[fastapi]>=2.39.1",
    "langfuse>=3.4.2",
    "psycopg[binary]>=3.3.3",
    "qdrant-client>=1.17.0",
    "redis>=7.2.1",
    "langchain>=1.2.13",
    "langchain-core>=1.2.18",
    "langchain-qdrant>=1.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
